--- a/web.config
+++ b/web.config
@@ -1,5 +1,8 @@
-<system.webServer>
-  <staticContent>
-    <mimeMap fileExtension=".json" mimeType="text/html" />
-  </staticContent>
-</system.webServer>
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+   <system.webServer>
+      <staticContent>
+    	<mimeMap fileExtension=".json" mimeType="application/json" />
+      </staticContent>
+   </system.webServer>
+</configuration>
