--- a/web.config
+++ b/web.config
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-   <system.webServer>
-      <staticContent>
-    	<mimeMap fileExtension=".json" mimeType="application/json" />
-      </staticContent>
-   </system.webServer>
+   	<system.webServer>
+		<staticContent>
+	    	<mimeMap fileExtension=".json" mimeType="application/json" />
+	    </staticContent>
+   	</system.webServer>
+   	<rule name="rule 1E" stopProcessing="true">
+		<match url="."  />
+		<action type="Rewrite" url="/index.php"  />
+    </rule>
 </configuration>
