--- a/web.config
+++ b/web.config
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-   	<system.webServer>
-		<staticContent>
-	    	<mimeMap fileExtension=".json" mimeType="application/json" />
-	    </staticContent>
-   	</system.webServer>
-   	<rule name="rule 1E" stopProcessing="true">
-		<match url="."  />
-		<action type="Rewrite" url="/index.php"  />
-    </rule>
+    <system.webServer>
+        <staticContent>
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+        </staticContent>
+    </system.webServer>
+    <rewrite>
+        <rules>
+            <rule name="rule 1E" stopProcessing="true">
+                <match url="."  />
+                <action type="Rewrite" url="/index.php"  />
+            </rule>
+        </rules>
+    </rewrite>
 </configuration>
