--- a/web.config
+++ b/web.config
@@ -5,12 +5,12 @@
             <mimeMap fileExtension=".json" mimeType="application/json" />
         </staticContent>
     </system.webServer>
- <!--    <rewrite>
+    <rewrite>
         <rules>
             <rule name="rule 1E" stopProcessing="true">
                 <match url="."  />
                 <action type="Rewrite" url="/index.php"  />
             </rule>
         </rules>
-    </rewrite> -->
+    </rewrite>
 </configuration>
