--- a/web.config
+++ b/web.config
@@ -5,11 +5,14 @@
             <mimeMap fileExtension=".json" mimeType="application/json" />
         </staticContent>
     </system.webServer>
-    <rewrite>
+     <rewrite>
         <rules>
-            <rule name="rule 1E" stopProcessing="true">
-                <match url="."  />
-                <action type="Rewrite" url="/index.php"  />
+            <rule name="redirect all requests" stopProcessing="true">
+                <match url="^(.*)$" ignoreCase="false" />
+                <conditions logicalGrouping="MatchAll">
+                    <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" pattern="" ignoreCase="false" />
+                </conditions>
+                <action type="Rewrite" url="index.php" appendQueryString="true" />
             </rule>
         </rules>
     </rewrite>
